{
    "name": "InputActionAsset_Player",
    "maps": [
        {
            "name": "ActionMap_Player",
            "id": "55a193bc-f222-47c2-8721-635309b1e0a9",
            "actions": [
                {
                    "name": "Figure_1",
                    "type": "Button",
                    "id": "b815d00d-2593-4f27-94bd-58815c963254",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Figure_2",
                    "type": "Button",
                    "id": "2db0b802-3a27-4b38-adf9-0fe07d6e1aeb",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Figure_3",
                    "type": "Button",
                    "id": "38bf6c74-1e89-486a-9b00-cd21cfdd985b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Figure_4",
                    "type": "Button",
                    "id": "9fac3f67-4c2a-4aaf-b502-f12dccecaf4a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Spawn_Figure",
                    "type": "Button",
                    "id": "2da81c10-ce80-483c-a577-251d5ab8f73f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "f1519923-a784-4291-baae-446f0941302d",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Figure_1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "df177102-cc41-4b85-90f2-ed76052ceabe",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Figure_1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b6f1eda9-9ec3-4bae-926b-f54d57b4b4db",
                    "path": "<Keyboard>/r",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Figure_2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "fc432cbe-a312-4fab-85d8-b3e105f8e831",
                    "path": "<Gamepad>/buttonWest",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Figure_2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d015a4b4-9344-48e1-9a5e-7c5dc88ef4dd",
                    "path": "<Gamepad>/buttonNorth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Figure_3",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b6887879-cc8a-4744-8f06-1143a518c847",
                    "path": "<Gamepad>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Figure_4",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2d51afca-2d6e-4386-b10d-5681c0677cb5",
                    "path": "<Gamepad>/rightTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Spawn_Figure",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}